Fix overflow not being visible in firefox

--- a/css/base.css
+++ b/css/base.css
@@ -32,7 +32,7 @@ a:hover {
 }
 
 #view {
-	display: table;
+	display: flex;
 	width: 100%;
 	height: 100%;
 	box-sizing: border-box;
@@ -41,7 +41,7 @@ a:hover {
 #view-content {
 	position: relative;
 	display: table-cell;
-	vertical-align: middle;
+	/*vertical-align: middle;*/
 	width: 100%;
 }
 .view {
